# my-portfolio

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  compose.yml  go.mod  main.go
api/: Dockerfile  database_actions.go  go.mod  main.go
api/controllers/: blog.go  create_blog.go  create_project.go  project.go
api/models/: project.go
frontend/: .env  Dockerfile  database_actions.go  go.mod  go.sum  main.go  package.json
frontend/controllers/: create_message.go  favourite_song.go  get_blogs.go  get_currently_working.go  get_projects.go  get_technologies.go  last_listened.go  render_blog.go
frontend/models/: blog.go  project.go
frontend/static/css/: input.css  output.css
frontend/templates/: about.html  blog.gohtml  blog.html  blogs.gohtml  blogs.html  contact.html  currentlyWorking.gohtml  homepage.html  messageNotReceived.html  messageReceived.html  navbar.html  projects.gohtml  projects.html  song.gohtml  technologies.gohtml
html/pages/: about.html  blogs.html  contact.html  notes.html  projects.html
html/templates/: blog.html  blog_list.html  currently_working.html  project_list.html
scripts/: create_db.py  newBlog.sh  newProject.sh
src/: endpoint_functions.rs  main.rs
static/css/: build.css  input.css  output.css  style.css
templates/: homepage.html
