[package]
name = "my-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.6", features = ["fs"] }
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tera = "1.20.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
comrak = "0.41.1"
